# ChangeLog for dev-perl/Text-German
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.11 2006/08/17 21:30:42 mcummings Exp $

  17 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Text-German-0.06.ebuild:
  marking amd64 stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Text-German-0.03.ebuild, Text-German-0.06.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Text-German-0.06.ebuild:
  Mark 0.06 stable on ia64

  01 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  Text-German-0.06.ebuild:
  Keywording ~amd64

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Text-German-0.06.ebuild:
  Marking sparc stable

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Text-German-0.06.ebuild:
  Mark 0.06 ~ia64

*Text-German-0.06 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +Text-German-0.06.ebuild:
  Version bump

  05 Aug 2005; David Holm <dholm@gentoo.org> Text-German-0.03.ebuild:
  Added to ~ppc.

  12 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  Text-German-0.03.ebuild:
  Stable on sparc

  22 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  Text-German-0.03.ebuild:
  Unmasking for x86

*Text-German-0.03 (06 Oct 2004)

  06 Oct 2004; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +Text-German-0.03.ebuild:
  Dep for Plucene - perl port of lucene
