@@ -1,13 +1,13 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/Text-German-0.06.ebuild,v 1.7 2006/08/17 21:30:42 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/Text-German-0.06.ebuild,v 1.9 2007/03/05 12:33:28 ticho Exp $
 
 EAPI="prefix"
 
 inherit perl-module
 
 DESCRIPTION="German grundform reduction"
-HOMEPAGE="http://search.cpan.org/~ulpfr/${P}/"
+HOMEPAGE="http://search.cpan.org/~ulpfr/"
 SRC_URI="mirror://cpan/authors/id/U/UL/ULPFR/${P}.tar.gz"
 
 LICENSE="Artistic"
@@ -19,4 +19,3 @@ SRC_TEST="do"
 
 
 DEPEND="dev-lang/perl"
-RDEPEND="${DEPEND}"
