@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Text-German
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.11 2006/08/17 21:30:42 mcummings Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.13 2007/03/05 12:33:28 ticho Exp $
+
+  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Text-German-0.06.ebuild:
+  Stable on x86, bug #169152.
+
+  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  Text-German-0.03.ebuild, Text-German-0.06.ebuild:
+  Version bump, thanks seemant
 
   17 Aug 2006; Michael Cummings <mcummings@gentoo.org>
   Text-German-0.06.ebuild:
